rather than '[Alias]' and its base's notes data, respectively.
[] Runcommand no longer truncates the first field if it is within double
quotes.
[] Duplicate entry now duplicates Double-click action of original as well.
[] Double-click on a shortcut entry now executes the action of its base.
[] Drag & Drop of entries, that have individual DCA values, between different
databases now works.

New Features for 3.18.1
=======================
[2832983] Add/Edit Autotype field now same width as for the Run Command field.
Also, the Edit/View dialog now has the details of the entry being edited/viewed
in its title caption.  This will only get refreshed on saving the entry.
[] Add new AutoType special fields '\wnnn' and '\Wnnn'. Unlike '\d', which
sets the delay between sending each subsequent character, '\w' & '\W' introduces
a one-time delay where they appear.  For '\w', the value 'nnn' is in
milli-seconds. For '\W', this specifies seconds. Note: Max. value is
999s (16m 39s), during which time PasswordSafe will be unresponsive
while it waits the specified time. Also support via the Run Command $a command.
[] Add menu item to copy the Run Command to the clipboard.

New Features for 3.18
=====================
[] Add minidump support for release builds so that we can try to solve
issues with more information than Windows normally provides.

New Features for 3.18
=====================
[2793283] Allow entry to override doubleclick setting.
[2793280] Browse+Autotype added to configurable double click actions.
[] Implement Virtual Keyboards for multilingual passphrase entry.
[] DragBar now has ToolTips to inform user of its use.
[] User can close the currently open database via the System Tray
menu.
[] Improved Merge reporting.

Changes to Existing Features in 3.18
====================================
[] New toolbar icon set has been replaced with icons based on famfamfam's
silk set.
[] Reworked Add and Edit dialogs into Property Pages.

Bugs fixed in 3.18
==================